--- a/esmvaltool/config-developer.yml
+++ b/esmvaltool/config-developer.yml
@@ -230,6 +230,7 @@ CMIP5:
     'NorESM1-ME': ['NCC']
 
 OBS:
+  cmor_strict: false
   input_dir:
     default: 'Tier[tier]/[dataset]'
     BSC: '[type]/[institute.lower]/[dataset.lower]/[freq_folder]/[short_name][freq_base]'
@@ -244,6 +245,7 @@ OBS:
   cmor_type: 'CMIP5'
 
 obs4mips:
+  cmor_strict: false
   input_dir:
     default: 'Tier[tier]/[dataset]'
   input_file: '[short_name]_[dataset]_[level]_[version]_*.nc'
@@ -254,9 +256,9 @@ obs4mips:
   output_file: '[project]_[dataset]_[level]_[version]_[field]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP6'
   cmor_path: 'obs4mips'
-  cmor_strict: False
 
 ana4mips:
+  cmor_strict: false
   input_dir:
     default: 'Tier[tier]/[dataset]'
   input_file: '[short_name]_[mip]_[type]_[dataset]_*.nc'
