Use auxiliary data dir

--- a/esmvaltool/recipes/recipe_shapeselect.yml
+++ b/esmvaltool/recipes/recipe_shapeselect.yml
@@ -22,9 +22,11 @@ diagnostics:
     scripts:
       script1:
         script: shapeselect/diag_shapeselect.py
-        #shppath: 'esmvaltool/diag_scripts/shapeselect/testdata/Elbe.shp'
-        #shppath: 'esmvaltool/diag_scripts/shapeselect/testdata/MotalaStrom.shp'
-        shppath: 'esmvaltool/diag_scripts/shapeselect/testdata/Thames.shp'
-        wgtmet: 'mean_inside'
+        # Example shapefiles can be found in:
+        # esmvaltool/diag_scripts/shapeselect/testdata/
+        # Relative paths are relative to 'auxiliary_data_dir' as configured in
+        # the config-user.yml file.
+        shapefile: 'Thames.shp'
+        weighting_method: 'mean_inside'
         write_xlsx: true
         write_netcdf: true
