--- a/esmvaltool/recipes/recipe_spei.yml
+++ b/esmvaltool/recipes/recipe_spei.yml
@@ -6,26 +6,24 @@ documentation:
   references: ['acknow_project']
 
 datasets:
-#  - {dataset: CRU, mip: Amon, project: OBS, type: reanaly, version: 1, start_year: 1990, end_year: 1999, tier: 3}
-  - {dataset: CRU, mip: Amon, project: OBS, type: reanaly, version: 1, start_year: 1990, end_year: 1995, tier: 3}
-  - {dataset: ACCESS1-0, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1995}
-#  - {dataset: ACCESS1-3, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1995}
-##  - {dataset: ERA-Interim, mip: Amon, project: OBS, type: reanaly, version: 1, start_year: 2000, end_year: 2004, tier: 3}
-#  - {dataset: ACCESS1-0, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: ACCESS1-3, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: BNU-ESM, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: CNRM-CM5, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: EC-EARTH, project: CMIP5, mip: Amon, exp: historical, ensemble: r12i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: GFDL-CM3, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: GISS-E2-H, project: CMIP5, mip: Amon, exp: historical, ensemble: r6i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: HadGEM2-CC, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: HadGEM2-ES, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: inmcm4, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: IPSL-CM5A-LR, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: IPSL-CM5A-MR, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: IPSL-CM5B-LR, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: MPI-ESM-MR, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
-#  - {dataset: NorESM1-M, project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1990, end_year: 1999}
+#  - {dataset: CRU, project: OBS, type: reanaly, version: 1, tier: 3}
+  - {dataset: ERA-Interim, project: OBS, type: reanaly, version: 1, tier: 3}
+  - {dataset: ACCESS1-0, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: ACCESS1-0, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: ACCESS1-3, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: BNU-ESM, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: CNRM-CM5, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: EC-EARTH, project: CMIP5, exp: historical, ensemble: r12i1p1}
+#  - {dataset: GFDL-CM3, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: GISS-E2-H, project: CMIP5, exp: historical, ensemble: r6i1p1}
+#  - {dataset: HadGEM2-CC, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: HadGEM2-ES, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: inmcm4, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: IPSL-CM5A-LR, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: IPSL-CM5A-MR, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: IPSL-CM5B-LR, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: MPI-ESM-MR, project: CMIP5, exp: historical, ensemble: r1i1p1}
+#  - {dataset: NorESM1-M, project: CMIP5, exp: historical, ensemble: r1i1p1}
 
 preprocessors:
   preprocessor:
@@ -37,14 +35,14 @@ diagnostics:
   diagnostic:
     description: Calculating SPI and SPEI index
     variables:
-      pr:
-        reference_dataset: CRU
+      pr: &var
+        reference_dataset: ERA-Interim
         preprocessor: preprocessor
+        start_year: 1990
+        end_year: 1999
+        mip: Amon
         field: T2Ms
-      tas:
-        reference_dataset: CRU
-        preprocessor: preprocessor
-        field: T2Ms
+      tas: *var
     scripts:
       spi:
         script: droughtindex/diag_spi.r
