--- a/esmvaltool/recipes/recipe_ocean_Landschutzer2014.yml
+++ b/esmvaltool/recipes/recipe_ocean_Landschutzer2014.yml
@@ -46,11 +46,54 @@ preprocessors:
       target_grid: 2x2
       scheme: linear
 
+  # Global area-weighted Average from 2D field
+  prep_global_Surface_average_timeseries_2D:
+    custom_order: true
+    average_region:
+      coord1: longitude
+      coord2: latitude
+    multi_model_statistics:
+      span: overlap
+      statistics: [mean ]
+
+# --------------------------------------------------
+# Diagnostics
+# --------------------------------------------------
 diagnostics:
+
+  # --------------------------------------------------
+  # Surface time series vs OBS
+  # --------------------------------------------------
+  diag_timeseries_surface_average_vs_OBS:
+    description: Global surface time series (Landschutzer2014 observations)
+    variables:
+      dpco2:
+        preprocessor: prep_global_Surface_average_timeseries_2D
+        field: TO2M
+        mip: Omon
+        fx_files: [areacello, ]
+      spco2:
+        preprocessor: prep_global_Surface_average_timeseries_2D
+        field: TO2M
+        mip: Omon
+        fx_files: [areacello, ]
+      fgco2:
+        preprocessor: prep_global_Surface_average_timeseries_2D
+        field: TO2M
+        mip: Omon
+        fx_files: [areacello, ]
+    additional_datasets:
+      - {dataset: Landschutzer2014,  project: OBS,  type: clim,  version: CDIAC_G05,  start_year: 2000,  end_year: 2010,  tier: 2}
+    scripts:
+      Global_surface_timeseries:
+        script: ocean/diagnostic_timeseries.py
+        observational_dataset: {dataset: Landschutzer2014, project: OBS}
+
+
   # --------------------------------------------------
   # Map diagnostics vs OBS
   # --------------------------------------------------
-  diag_surface_maps_dpco2:
+  diag_surface_maps_vs_OBS:
     description: Global Ocean Surface maps vs OBS
     variables:
       dpco2:
@@ -58,50 +101,22 @@ diagnostics:
         field: TO2M
         mip: Omon
         fx_files: [areacello, ]
-    additional_datasets:
-      - {dataset: Landschutzer2014,  project: OBS,  type: clim,  version: CDIAC_G05,  start_year: 2000,  end_year: 2010,  tier: 2}
-    scripts:
-      Global_Ocean_surface_map:
-        script: ocean/diagnostic_maps.py
-      Global_Ocean_model_vs_obs:
-        script: ocean/diagnostic_model_vs_obs.py
-        observational_dataset: {dataset: Landschutzer2014, project: OBS}
-        map_range: [-90., 90.]
-        dif_range: [-50., 50.]
-
-  # --------------------------------------------------
-  # Map diagnostics vs OBS
-  # --------------------------------------------------
-  diag_surface_maps_spco2:
-    description: Global Ocean Surface maps vs OBS
-    variables:
+        maps_range: [-90., 90.]
+        diff_range: [-50., 50.]
       spco2:
         preprocessor: prep_surface_map_2D
         field: TO2M
         mip: Omon
         fx_files: [areacello, ]
-    additional_datasets:
-      - {dataset: Landschutzer2014,  project: OBS,  type: clim,  version: CDIAC_G05,  start_year: 2000,  end_year: 2010,  tier: 2}
-    scripts:
-      Global_Ocean_surface_map:
-        script: ocean/diagnostic_maps.py
-      Global_Ocean_model_vs_obs:
-        script: ocean/diagnostic_model_vs_obs.py
-        observational_dataset: {dataset: Landschutzer2014, project: OBS}
-        map_range: [300., 400.]
-        dif_range: [-50., 50.]
-
-  # --------------------------------------------------
-  # Map diagnostics vs OBS
-  # --------------------------------------------------
-  diag_surface_maps_fgco2:
-    description: Global Ocean Surface maps vs OBS
-    variables:
+        maps_range: [300., 400.]
+        diff_range: [-50., 50.]
       fgco2:
         preprocessor: prep_surface_map_2D
         field: TO2M
         mip: Omon
         fx_files: [areacello, ]
+        maps_range: [-0.2, 0.2]
+        diff_range: [-0.1, 0.1]
     additional_datasets:
       - {dataset: Landschutzer2014,  project: OBS,  type: clim,  version: CDIAC_G05,  start_year: 2000,  end_year: 2010,  tier: 2}
     scripts:
@@ -110,8 +125,6 @@ diagnostics:
       Global_Ocean_model_vs_obs:
         script: ocean/diagnostic_model_vs_obs.py
         observational_dataset: {dataset: Landschutzer2014, project: OBS}
-        map_range: [-0.2, 0.2]
-        dif_range: [-0.1, 0.1]
 
 
 
