--- a/esmvaltool/config-user_MISTRAL.yml
+++ b/esmvaltool/config-user_MISTRAL.yml
@@ -5,9 +5,10 @@ write_plots: True
 write_netcdf: True
 log_level: debug
 exit_on_warning: False
-output_file_type: ps
+output_file_type: png
 
-output_dir: /work/bd0854/b309143/ESMValTool/
+output_dir: /work/bd0854/b309143/ESMValTool/  # user's specific!
+auxiliary_data_dir: /mnt/lustre02/work/bd0854/b309143/ESMValTool/  # user's specific!
 
 save_intermediary_cubes: False
 max_parallel_tasks: 8
@@ -16,7 +17,8 @@ rootpath:
   CMIP5:    /mnt/lustre01/work/kd0956/CMIP5/data/cmip5/output1
 #  CMIP5:    /mnt/lustre02/work/bd0854/b309057/CMIP5
   CMIP6:    /mnt/lustre02/work/ik1017/CMIP6/data/CMIP6
-  OBS:      /mnt/lustre02/work/bd0854/b309070/obs
+#  OBS:      /mnt/lustre02/work/bd0854/b309070/obs
+  OBS:      /mnt/lustre02/work/bd0854/DATA/ESMValTool1/OBS
   obs4mips: /mnt/lustre02/work/bd0854/b309070/obs
   ana4mips: /mnt/lustre02/work/bd0854/b309070/obs
   default:  /mnt/lustre01/work/kd0956/CMIP5/data/cmip5/output1
